--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,8 +77,8 @@ services:
     image: docker.elastic.co/kibana/kibana:$ELASTIC_VERSION
     ports:
       - 5601:5601
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch-hot:9200 #,http://elasticsearch-warm:9200,http://elasticsearch-cold:9200
+    volumes:
+      - ./kibana.yml:/usr/share/kibana/config/kibana.yml:ro
     depends_on:
       - elasticsearch-hot
       - elasticsearch-warm
